Details
-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.7.0
-
None
-
-
7dc67d989 (dev), 41df8e68c (6.8), c52d0bfb0 (6.7)
Description
As stated in title, QListWidgetItem::setForeground() does not have any effect.
I'm using PyQt6, but I'm sure it's Qt C++ issue,
because QListWidgetItem::setBackground() works as it should.
I'm attaching very simple reproduction application.
When I change PyQt6 to PyQt5 (Qt 5.15) it works as it should.
PyQt allows to pass QColor, QBrush or QGlobalColor to setForeground(). I tried them all.
Attachments
Issue Links
- is duplicated by
-
QTBUG-126543 windows11 style has QTableView ignoring Qt::ForegroundRole
-
- Closed
-
-
QTBUG-127324 Wrong Foreground color with windows 11 style
-
- Closed
-
-
QTBUG-129544 QListWidgetItem::setForeground() is not working with the Windows 11 style.
-
- Closed
-
For Gerrit Dashboard: QTBUG-126596 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
570885,3 | QWindows11Style: Respect ItemViewItem foreground color | dev | qt/qtbase | Status: MERGED | +2 | 0 |
571297,2 | QWindows11Style: Respect ItemViewItem foreground color | 6.8 | qt/qtbase | Status: MERGED | +2 | 0 |
573344,2 | QWindows11Style: Respect ItemViewItem foreground color | 6.7 | qt/qtbase | Status: MERGED | +2 | 0 |