QWindows11Style: Respect ItemViewItem foreground color

Fixes: QTBUG-126596
Fixes: QTBUG-126543
Change-Id: I39803927259092be98dad02fa286bc92520ce43f
Reviewed-by: Oliver Wolff <oliver.wolff@qt.io>
(cherry picked from commit 7dc67d98976b7de7a34f74c9840d98aa5512d8dc)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit 41df8e68cbde91d699a3fb9d8e29134983352709)